--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ cx-oracle = "^8.3.0"
 rich = "^13.3.1"
 typer = "^0.7.0"
 sqlparse = "^0.4.3"
+pymysql = "^1.0.2"
+fastapi = "^0.92.0"
+uvicorn = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.9.0"
